# camel

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  codecov.yml  deploy.sh  gauntlet.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  engine.yml  gauntlet.yml  rust.yml  shell.yml
assets/books/: README.md
assets/models/: quiet-labeled-20250610.nnue
benches/: eval.rs  movegen.rs  moves.rs  position.rs  search.rs  see.rs
books/: README.md  winatchess.epd
scripts/: deploy.sh  gauntlet.sh
src/: board.rs  engine.rs  lib.rs  main.rs  moves.rs  uci.rs
src/core/: bitboard.rs  castling_rights.rs  color.rs  fen.rs  hash.rs  mod.rs  piece.rs  square.rs
src/core/moves/: make.rs  mod.rs  perft.rs  see.rs
src/core/position/: bitboard.rs  castling_rights.rs  color.rs  fen.rs  hash.rs  mod.rs  piece.rs  square.rs
src/engine/: mod.rs  time.rs  uci.rs
src/engine/commands/: executor.rs  mod.rs  parser.rs
src/engine/executor/: custom.rs  mod.rs  uci.rs
src/engine/parser/: custom.rs  (+2 more)
src/evaluate/: mod.rs  psqt.rs
src/evaluation/: mod.rs  moves.rs  nnue.rs  position.rs  psqt.rs
src/labeler/: mod.rs
src/moves/: gen.rs  knight.rs  magics.rs  make.rs  mod.rs  perft.rs
src/position/: bitboard.rs  board.rs  castling_rights.rs  color.rs  fen.rs  hash.rs  mod.rs  movegen.rs  moves.rs  piece.rs  square.rs  zobrist.rs
src/search/: alphabeta.rs  constraint.rs  history.rs  mod.rs  movepick.rs  picker.rs  pvs.rs  quiesce.rs  see.rs  table.rs
src/tuner/: mod.rs
src/uci/: mod.rs  time.rs
tests/: perft.rs  search.rs  winatchess.rs
(+23 files in other folders)
