[package]
name = "camel"
version = "2.0.0-alpha"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
ctor = "0.2.8"
derive_more = { version = "2.0.1", features = ["full"] }
primitive_enum = "1.2.0"
rand = "0.9.0"
arrayvec = "0.7.6"
serde_json = "1.0.140"

[dev-dependencies]
rstest = "0.23.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
